--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇳🇱 荷兰-229.9KB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇨🇳 中国-7.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.20MB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-3.10MB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇳🇱 荷兰-3.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2, server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇳🇱 荷兰-3.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
-      - 波兰-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
