--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-6.17MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-3.02MB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇳🇱 荷兰-3.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2, server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 波兰-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
