--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.17MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-3.02MB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.30MB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 波兰-2.48MB/s(Youtube:不良林), server: 217.30.10.66, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇯🇵 日本-3.87MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇳🇱 荷兰-3.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2, server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 🇳🇱 荷兰-3.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 波兰-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
