--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-3.30MB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 波兰-2.48MB/s(Youtube:不良林), server: 217.30.10.66, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇯🇵 日本-3.87MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 塞尔维亚-2.99MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇰🇷 韩国-8.11MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.34MB/s(Youtube:不良林), server: 213.183.59.206, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇳🇱 荷兰-2.06MB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-3.33MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇳🇱 荷兰-3.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2, server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇳🇱 荷兰-1.82MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-2.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 🇳🇱 荷兰-3.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
   - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 波兰-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 塞尔维亚-2.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
 rules:
