--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 塞尔维亚-2.99MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇰🇷 韩国-8.11MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.34MB/s(Youtube:不良林), server: 213.183.59.206, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇳🇱 荷兰-2.06MB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-3.33MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-3.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 波兰-3.07MB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-6.17MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-464.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇳🇱 荷兰-1.82MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇳🇱 荷兰-2.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 🇳🇱 荷兰-3.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 塞尔维亚-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 波兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.35MB/s(Youtube:不良林)
